intel/bench_214/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main/log.txt
bench_214/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main.c:54:19: error: expected unqualified-id
  const uint8_t (*)[8] dither;
                  ^
bench_214/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main/extr_.FFmpeglibavfiltervf_spp.c_store_slice_c_with_main.c:55:82: error: use of undeclared identifier 'dither'
  store_slice_c(dst, src, dst_linesize, src_linesize, width, height, log2_scale, dither);
                                                                                 ^
2 errors generated.
HLS FPGA Parse FAILED.
